unpackaged/main/default/objects/Cybersource_Config__mdt/Cybersource_Config__mdt.object-meta.xml
<CustomObject>
    <label>Cybersource Config</label>
    <pluralLabel>Cybersource Configs</pluralLabel>
</CustomObject>