unpackaged/main/default/objects/Cybersource_Config__mdt/fields/deliveryCountry__c.field-meta.xml
<CustomField>
    <fullName>deliveryCountry__c</fullName>
    <label>deliveryCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>