unpackaged/main/default/objects/Cybersource_Config__mdt/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <label>key</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>