unpackaged/main/default/objects/Cybersource_Config__mdt/fields/merchantId__c.field-meta.xml
<CustomField>
    <fullName>merchantId__c</fullName>
    <label>merchantId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>